Fixing the left-align text in my.messages

--- a/examination/client/debug/stylesheet/chatStyler.css
+++ b/examination/client/debug/stylesheet/chatStyler.css
@@ -105,6 +105,8 @@
 
 .chat-app .chat-message-line {
 	display: inline-block;
+
+	text-align: left;
 	padding: 5px;
 	max-width: 65%;
 	box-shadow: 0 2px 5px rgba(0,0,0,0.3)
@@ -118,7 +120,6 @@
 
 .chat-app .chat-bubble-me .chat-message-line {
 	background: red;
-	text-align: right;
 	border-bottom-left-radius: 8px;
 	border-top-left-radius: 8px;
 }
